# mygift

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  package-lock.json  settings.gradle  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: main.yml
auth-server/: README.md  build.gradle  build.gradle.kts
back/: .gitignore  build.gradle  build.gradle.kts  settings.gradle
db-manager/: build.gradle  build.gradle.kts
front/: .gitignore  build.gradle  package-lock.json  package.json  tsconfig.json
front-vue/: .prettierrc.json  README.md  build.gradle  index.html  package-lock.json  package.json
front-vue/src/: App.vue  main.ts  styles.css
front-vue/src/components/: CategoryModal.vue  DeleteModal.vue  FriendModal.vue  GiftModal.vue  NavBar.vue  (+2 more)
front/public/: index.html
front/src/: App.js  App.js.bck  App.tsx  Auth.js  ServerInformation.tsx  index.js  index.tsx
gradle/wrapper/: gradle-wrapper.properties
model/: build.gradle.kts
reset-password/: build.gradle  build.gradle.kts
scripts/: configuration.json  save.sh  start.sh  stop.sh
scripts/logback/: logback.xml
src/: TODO.md  auth_middleware.rs  commands.rs  configuration.rs  error_catcher.rs  main.rs  managers.rs  routes.rs
src/managers/: events_manager.rs  friends_manager.rs  jwt_manager.rs  notifications_manager.rs  pdf_generator.rs  session_manager.rs  test_helper.rs  users_manager.rs  wishlist_manager.rs
src/routes/: connection.rs  events.rs  files.rs  friends.rs  notifications.rs  users.rs  wishlist.rs
(+150 files in other folders)
