[package]
name = "mygift"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["tracing", "multipart"] }
axum-server = { version = "0.7.1", default-features = false, features = ["tls-rustls"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", default-features = false, features = ["fs", "cors", "trace", "tracing"] }
tower-cookies = "0.11.0"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt-multi-thread", "tracing"]}
tokio-util = "0.7.13"
futures-util = "0.3.31"

rusqlite = { version = "0.34.0", features = ["bundled"] }

pbkdf2 = "0.12.2"
sha1 = "0.10.6"
rsa = "0.9.7"
jsonwebtoken = "9.3.0"
rand = "0.8.5"

thiserror = "2.0.11"

chrono = "0.4.39"

uuid = { version = "1.12.1" , features = ["v4", "fast-rng"]}

image = { version = "0.25.5" , default-features = false, features = ["avif", "jpeg", "png", "webp"]}
num-derive = "0.4.2"

clap = { version = "4.5.28", features = ["derive"] }